--- a/src/App.css
+++ b/src/App.css
@@ -51,7 +51,7 @@ body{
 }
 
 .menu .menulist ul li a{
-  color: #000;
+  color: #5e0000;
   text-transform: capitalize;
 
 }
@@ -86,20 +86,65 @@ body{
 
 
 .container .company .evolve{
-  margin-bottom: 20px;
-  line-height: 1.4;
+  margin: 0px;
 }
 
 .container .company .evolve h1{
-  font-size: 60px;
+  font-size: 70px;
   text-transform: uppercase;
-  color: #000;
+  color: #5e0000;
   font-weight: 700;
 }
 
 .container .company .evolve h3{
-  font-size: 27px;
+  font-size: 36px;
   text-transform: lowercase;
+  color: #ffa6a3;
+  font-weight: 200;
+  margin-bottom: 10px;
+}
+
+.container .company .evolve p{
+  font-size: 16px;
+  text-transform: capitalize;
+  color: #ff6b66;
+  font-weight: 400;
+  line-height: 1.5;
+}
+
+
+.container .company .reg{
+  margin-top: 20px;
+  display: flex;
+  align-items: center;
+  gap: 2rem;
+}
+
+.container .company .reg .join{
+  padding: 5px 20px;
+  background-color: #ffc235;
   color: #000;
-  font-weight: 700;
+  border-radius: 4px;
+  box-shadow: 0px 0px 4px #ff6b66;
+  transition: 0.2s ease;
+}
+
+.container .company .reg .join:hover{
+  background-color: #ff6b66;
+  color: #fff;
+  box-shadow: 0px 0px 4px #ffc235;
+}
+
+.container .company .reg a:nth-child(2){
+  color: #ff6b66;
+  text-decoration: underline;
+}
+
+
+.classes{
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(360px, auto));
+  align-items: center;
+  gap: 1rem;
+  padding: 0px 12%;
 }
